*refactor migrate test from enzyme to testng-library

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,6 +52,7 @@
     "@icons-pack/react-simple-icons": "^9.3.0",
     "@popperjs/core": "^2.11.7",
     "@tanstack/react-table": "^8.20.5",
+    "@testing-library/react-hooks": "8.0.1",
     "@types/react-modal": "3.16.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
@@ -93,10 +94,8 @@
     "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "^17.0.17",
     "@types/use-persisted-state": "^0.3.4",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "babel-loader": "^9.1.2",
     "doiuse": "^6.0.3",
-    "enzyme": "^3.11.0",
     "jest-axe": "^8.0.0",
     "loki": "^0.35.1",
     "postcss": "^8.4.47",
