--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -57,8 +57,7 @@
     "date-fns": "^2.30.0",
     "dequal": "^2.0.3",
     "formik": "^2.4.6",
-    "nuka-carousel": "^5.6.0",
-    "rc-tooltip": "^5.3.1",
+    "nuka-carousel": "^7.0.0",
     "react-datepicker": "^4.25.0",
     "react-feather": "^2.0.10",
     "react-hot-keys": "^2.7.3",
@@ -69,8 +68,7 @@
     "react-simple-timefield": "^3.3.1",
     "react-uid": "^2.4.0",
     "react-use": "^17.6.0",
-    "use-deep-compare": "^1.3.0",
-    "use-persisted-state": "^0.3.3"
+    "use-deep-compare": "^1.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
@@ -99,7 +97,7 @@
     "@types/use-persisted-state": "^0.3.5",
     "babel-loader": "^9.2.1",
     "doiuse": "^6.0.5",
-    "jest-axe": "^9.0.0",
+    "jest-axe": "^10.0.0",
     "loki": "^0.35.1",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
