--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,5 +1,7 @@
 name: check pull request
-on: pull_request
+on:
+  pull_request:
+    branches: [master]
 env:
   CI: true
   PNPM_CACHE_FOLDER: .pnpm-store
@@ -8,7 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/install
       - run: pnpm run lint
       - run: pnpm run test
@@ -18,7 +20,7 @@ jobs:
   test_visual:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/install
       - run: pnpm run build-storybook
       - run: export NODE_OPTIONS=--openssl-legacy-provider && pnpm run test:visual
