--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -2,10 +2,6 @@ name: publish release
 env:
   CI: true
   PNPM_CACHE_FOLDER: .pnpm-store
-  GIT_AUTHOR_NAME: GitHub Actions Bot
-  GIT_AUTHOR_EMAIL: <>
-  GIT_COMMITTER_NAME: GitHub Actions Bot
-  GIT_COMMITTER_EMAIL: <>
 # only trigger on pull request closed events
 on:
   pull_request:
@@ -13,22 +9,11 @@ on:
     branches: [master]
 
 jobs:
-  test:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/install
-      - run: pnpm run lint
-      - run: pnpm run test
-        env:
-          NODE_OPTIONS: --max-old-space-size=8192
-
   build:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/install
       - run: pnpm run build-storybook
 
@@ -42,14 +27,14 @@ jobs:
   chromatic-deployment:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [build]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: ./.github/actions/install
       - name: Publish to Chromatic
-        uses: chromaui/action@v1
+        uses: chromaui/action@v11
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
@@ -60,9 +45,9 @@ jobs:
   publish_canary:
     if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [build]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: ./.github/actions/install
@@ -89,7 +74,7 @@ jobs:
         run: |
           tag=$(echo ${{ github.event.pull_request.head.ref }} | sed 's/release\///')
           echo ::set-output name=tag::$tag
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: ./.github/actions/install
