--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -1,4 +1,4 @@
-name: publish release
+name: canary release
 env:
   CI: true
   PNPM_CACHE_FOLDER: .pnpm-store
@@ -43,7 +43,7 @@ jobs:
           autoAcceptChanges: true
 
   publish_canary:
-    if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'release/v')
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -56,34 +56,3 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish to npm
         run: pnpm run publish-canary
-
-  publish_release:
-    # this job will only run if the PR has been merged
-    if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'release/v')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check Release Format
-        id: check-release
-        run: |
-          if [[ ${{ github.head_ref }} =~ ^release/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo ::set-output name=match::true
-          fi
-      - name: Create tag
-        if: steps.check-release.outputs.match == 'true'
-        id: create_tag
-        run: |
-          tag=$(echo ${{ github.event.pull_request.head.ref }} | sed 's/release\///')
-          echo ::set-output name=tag::$tag
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: ./.github/actions/install
-      - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Publish to npm
-        if: steps.check-release.outputs.match == 'true'
-        run: |
-          git tag --force ${{ steps.create_tag.outputs.tag }} -m "tag release ${{ steps.create_tag.outputs.tag }}"
-          git push -f origin ${{ steps.create_tag.outputs.tag }}
-          pnpm run publish-release
