--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.2",
   "description": "Hazelcast design system components",
   "author": "",
-  "homepage": "https://github.com/hazelcast/frontend-shared#readme",
+  "homepage": "https://github.com/hazelcast/hive#readme",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hazelcast/frontend-shared.git"
+    "url": "git+https://github.com/hazelcast/hive.git"
   },
   "scripts": {
     "compile": "shx rm -f *.tsbuildinfo && shx rm -rf lib && shx mkdir lib && shx cp -r src/* lib && shx rm -rf lib/*.{tsx,ts} && shx rm -rf lib/**/*.{tsx,ts} && tsc -p tsconfig.build.json",
@@ -43,7 +43,7 @@
     "lint:css:fix": "stylelint --fix '**/*.{css,scss}'"
   },
   "bugs": {
-    "url": "https://github.com/hazelcast/frontend-shared/issues"
+    "url": "https://github.com/hazelcast/hive/issues"
   },
   "dependencies": {
     "@hazelcast/helpers": "^1.3.2",
