--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -13,7 +13,7 @@ runs:
       name: Install pnpm
       id: pnpm-install
       with:
-        version: 8
+        version: 10
         run_install: false
 
     - name: Get pnpm store directory
@@ -32,4 +32,4 @@ runs:
 
     - name: Install dependencies
       shell: bash
-      run: pnpm install --frozen-lockfile
+      run: pnpm install
