--- a/.github/workflows/manual-canary-release.yml
+++ b/.github/workflows/manual-canary-release.yml
@@ -31,5 +31,8 @@ jobs:
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # Remove it after monorepo is dead!!!
+      - name: Reset pnpm-lock.yaml
+        run: git restore pnpm-lock.yaml
       - name: Publish to npm
         run: pnpm run publish-canary
