--- a/.github/workflows/manual-canary-release.yml
+++ b/.github/workflows/manual-canary-release.yml
@@ -6,33 +6,60 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/install
-      - run: pnpm run build-storybook
+  #  test:
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - uses: actions/checkout@v3
+  #      - uses: ./.github/actions/install
+  #      - run: pnpm run lint
+  #      - run: pnpm run test
+  #        env:
+  #          NODE_OPTIONS: --max-old-space-size=8192
 
-      - name: Archive screenshots
-        if: ${{ failure() }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: loki-screenshots
-          path: packages/ui/.loki
+  #  build:
+  #    if: github.event.pull_request.merged == true
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - uses: actions/checkout@v3
+  #      - uses: ./.github/actions/install
+  #      - run: pnpm run build-storybook
+
+  #      - name: Archive screenshots
+  #        if: ${{ failure() }}
+  #        uses: actions/upload-artifact@v4
+  #        with:
+  #          name: loki-screenshots
+  #          path: packages/ui/.loki
+
+  #  chromatic-deployment:
+  #    if: github.event.pull_request.merged == true
+  #    runs-on: ubuntu-latest
+  #    needs: [test, build]
+  #    steps:
+  #      - uses: actions/checkout@v2
+  #        with:
+  #          fetch-depth: 0
+  #      - uses: ./.github/actions/install
+  #      - name: Publish to Chromatic
+  #        uses: chromaui/action@v1
+  #        with:
+  #          token: ${{ secrets.GITHUB_TOKEN }}
+  #          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+  #          exitZeroOnChanges: true
+  #          workingDir: packages/ui
+  #          autoAcceptChanges: true
 
   publish_canary:
+    #    if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
-    needs: [build]
+    #    needs: [test, build]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: ./.github/actions/install
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # Remove it after monorepo is dead!!!
-      - name: Reset pnpm-lock.yaml
-        run: git restore pnpm-lock.yaml
       - name: Publish to npm
         run: pnpm run publish-canary
