add manual canary release

--- a/.github/workflows/manual-canary-release.yml
+++ b/.github/workflows/manual-canary-release.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Reset pnpm-lock.yaml
         run: git restore pnpm-lock.yaml
       - name: Publish to npm
-        run: pnpm run publish-canary
+        run: pnpm run publish-canary-forced
