--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -1,7 +1,6 @@
 name: canary release
 env:
   CI: true
-  PNPM_CACHE_FOLDER: .pnpm-store
 # only trigger on pull request closed events
 on:
   pull_request:
@@ -15,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/install
-      - run: pnpm run build-storybook
+      - run: npm run build-storybook
       - name: Publish to Chromatic
         uses: chromaui/action@v11
         with:
@@ -37,4 +36,4 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish to npm
-        run: pnpm run publish-canary
+        run: npm run publish-canary
