--- a/.github/workflows/manual-canary-release.yml
+++ b/.github/workflows/manual-canary-release.yml
@@ -1,7 +1,6 @@
 name: manual canary release
 env:
   CI: true
-  PNPM_CACHE_FOLDER: .pnpm-store
 on:
   workflow_dispatch:
 
@@ -16,8 +15,5 @@ jobs:
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # remove after we kill monorepo
-      - name: Reset pnpm-lock.yaml
-        run: git restore pnpm-lock.yaml
       - name: Publish to npm
-        run: pnpm run publish-canary-forced
+        run: npm run publish-canary-forced
