--- a/.github/workflows/manual-canary-release.yml
+++ b/.github/workflows/manual-canary-release.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Increment version
         run: |
           npm version --preid canary --no-commit-hooks ${{ github.event.inputs.release_type || 'prerelease' }}
-          git push --tags
+          git push --tags --no-verify
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish to npm
