--- a/.github/workflows/manual-canary-release.yml
+++ b/.github/workflows/manual-canary-release.yml
@@ -2,9 +2,11 @@ name: manual release
 env:
   CI: true
   GIT_AUTHOR_NAME: GitHub Actions Bot
-  GIT_AUTHOR_EMAIL: <>
+  GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
+  GIT_AUTHOR_USERNAME: github-actions[bot]
   GIT_COMMITTER_NAME: GitHub Actions Bot
-  GIT_COMMITTER_EMAIL: <>
+  GIT_COMMITTER_EMAIL: github-actions[bot]@users.noreply.github.com
+  GIT_COMMITTER_USERNAME: github-actions[bot]
 on:
   workflow_dispatch:
     inputs:
