--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hot-keys": "^2.7.3",
     "react-merge-refs": "^1.1.0",
     "react-modal": "^3.16.3",
+    "react-reconciler": "^0.32.0",
     "react-select": "^5.10.0",
     "react-simple-timefield": "^3.3.1",
     "react-uid": "^2.4.0",
