--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "verify-all": "npm run lint && npm run test && npm run build-storybook && npm run test:visual"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.19",
+    "@floating-ui/core": "^1.7.3",
+    "@floating-ui/react": "^0.26.28",
+    "@headlessui/react": "^2.2.0",
     "@icons-pack/react-simple-icons": "^12.0.0",
-    "@popperjs/core": "^2.11.8",
     "@tanstack/react-table": "^8.21.2",
     "@types/react-modal": "3.16.3",
     "classnames": "^2.5.1",
@@ -56,19 +57,19 @@
     "dequal": "^2.0.3",
     "formik": "^2.4.6",
     "nuka-carousel": "^7.0.0",
-    "react-datepicker": "^4.25.0",
+    "react-datepicker": "^7.5.0",
     "react-feather": "^2.0.10",
     "react-hot-keys": "^2.7.3",
     "react-merge-refs": "^1.1.0",
     "react-modal": "^3.16.3",
-    "react-popper": "^2.3.0",
+    "react-reconciler": "^0.32.0",
     "react-select": "^5.10.0",
     "react-simple-timefield": "^3.3.1",
     "react-uid": "^2.4.0",
     "react-use": "^17.6.0",
     "serialize-error": "^12.0.0",
     "use-deep-compare": "^1.3.0",
-    "yup": "^0.32.11"
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
@@ -98,9 +99,9 @@
     "@types/jest": "^29.5.14",
     "@types/jest-axe": "^3.5.9",
     "@types/node": "^18.15.3",
-    "@types/react": "^18.3.18",
+    "@types/react": "^19.1.12",
     "@types/react-datepicker": "^4.19.6",
-    "@types/react-dom": "^18.3.5",
+    "@types/react-dom": "^19.1.9",
     "@types/use-persisted-state": "^0.3.5",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
@@ -130,8 +131,8 @@
     "postcss-reporter": "^7.1.0",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.5.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
@@ -148,11 +149,11 @@
   },
   "peerDependencies": {
     "@types/lodash": "^4.17.13",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "lodash": "^4.17.21",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19",
+    "react-dom": "^19"
   },
   "publishConfig": {
     "access": "public"
