--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -10,6 +10,12 @@ runs:
         node-version: 22
         cache: 'npm'
 
+      # Ensure uses a version compatible with NPM "Trusted Publishers"
+      # https://docs.npmjs.com/trusted-publishers#supported-cicd-providers
+    - name: Update npm
+      shell: bash
+      run: npm install -g npm@latest
+
     - name: Install dependencies
       shell: bash
       run: npm ci
