--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -9,6 +9,7 @@ runs:
       with:
         node-version: 22
         cache: 'npm'
+        registry-url: 'https://registry.npmjs.org'
 
     - name: Install dependencies
       shell: bash
