--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -12,6 +12,7 @@ runs:
         registry-url: 'https://registry.npmjs.org'
 
     - name: Update npm
+      shell: bash
       run: npm install -g npm@latest
 
     - name: Install dependencies
