--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -11,6 +11,10 @@ runs:
         cache: 'npm'
         registry-url: 'https://registry.npmjs.org'
 
+    - name: Update npm
+      shell: bash
+      run: npm install -g npm@latest
+
     - name: Install dependencies
       shell: bash
       run: npm ci
